--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,27 @@
 #logo {
+	/* max-height: 5%; */
+	/* max-width: 80%; */
+	/* height: auto; */
+	/* text-align: center; */
+	/* display: block; */
+	/* margin: auto; */
+	width: 100%;
+	height: 100%;
+	filter: blur(4px);
+}
+
+#logodiv {
+	position: relative;
 	max-height: 5%;
 	max-width: 80%;
-	/* height: auto; */
-	text-align: center;
-	display: block;
 	margin: auto;
+}
+
+#overlay {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
 }
 
 body {
@@ -24,6 +41,22 @@ body {
 	justify-content: center;
 	min-height:100vh; min-height:100dvh;
 	text-align: center;
+}
+
+.loader {
+	border: 16px solid #f3f3f3; /* Light grey */
+	border-top: 16px solid #fea102; /* Blue */
+	border-radius: 50%;
+	width: 120px;
+	height: 120px;
+	animation: spin 2s linear infinite;
+	text-align: center;
+	margin: auto;
+}
+
+@keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
 }
 svg { width: 100%; height: auto; }
 .svg-container { width: 100%; max-width: 400px; display: inline-block; }
