--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,6 +54,15 @@ body {
 	margin: auto;
 }
 
+#buttons > img {
+	display: inline-block;
+}
+
+#buttons {
+	margin: auto;
+	width: max-content;
+}
+
 @keyframes spin {
 	0% { transform: rotate(0deg); }
 	100% { transform: rotate(360deg); }
